--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
 before_install:
   - nvm use v8.9
   - composer install
-  - apt-get -q update ; apt-get -yq install nasm
+  - sudo apt-get -q update ; sudo apt-get -yq install nasm
   - npm install
 
 script:
