--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,8 @@ before_install:
   - nvm use v8.9
   - composer install
   - npm install
+  - cp -uv .env.example .env
 
 script:
-  - vendor/bin/phpcs --extensions='php' --ignore='bootstrap,vendor,node_modules,storage,public,database,_ide_helper.php' --standard='PSR2' .
+  - vendor/bin/phpcs --extensions='php' -n --ignore='bootstrap,vendor,node_modules,storage,public,database,_ide_helper.php' --standard='PSR2' .
   - vendor/bin/phpunit --colors
