--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,11 @@ before_install:
   - npm install
   - cp -uv .env.example .env
   - php artisan key:generate
+  - php artisan ide-helper:generate
 
 script:
   - npm run dev
   - vendor/bin/phpcs --extensions='php' --ignore='*.blade.php,bootstrap,vendor,node_modules,storage,public,database,_ide_helper.php' --standard='PSR2' .
   - vendor/bin/phpunit --colors
+# This is disabled for now
+#  - vendor/bin/psalm
