--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ addons:
       - nasm
 
 before_install:
+  - nvm install v8.9
   - nvm use v8.9
   - composer -n --no-progress install
   - npm install
