--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
 before_install:
   - nvm install v8.9
   - nvm use v8.9
-  - curl -sS -o /usr/local/bin/security-checker https://get.sensiolabs.org/security-checker.phar
+  - curl -sS -o security-checker.phar https://get.sensiolabs.org/security-checker.phar
   - chmod +x /usr/local/bin/security-checker
   - composer -n --no-progress install
   - npm install
@@ -26,7 +26,7 @@ before_install:
   - php artisan ide-helper:generate
 
 script:
-  - security-check security:check composer.lock
+  - php security-checker.phar security:check composer.lock
   - npm run dev
   - vendor/bin/phpcs --extensions='php' --ignore='*.blade.php,bootstrap,vendor,node_modules,storage,public,database,_ide_helper.php' --standard='PSR2' .
   - vendor/bin/phpunit --colors
